# keto-carer

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml
backend/api/routes/: __init__.py  ai.py  grocery.py  meals.py  medications.py  notifications.py  nutrition.py  progress.py  users.py  water.py
backend/core/: config.py  database.py  scheduler.py
backend/models/: __init__.py  grocery.py  ingredient.py  meal.py  medication.py  progress.py  research.py  user.py  water.py
backend/schemas/: grocery.py  meal.py  medication.py  progress.py  user.py  water.py
backend/services/: ai_service.py  notification_service.py  nutrition_service.py  pdf_service.py  research_service.py
frontend/: .npmrc  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  GroceryList.tsx  MealPlanning.tsx  Medications.tsx  Progress.tsx  Settings.tsx  WaterTracking.tsx
